--- a/Preprocesamiento de datos/Codigo Python/Importar_datos.ipynb
+++ b/Preprocesamiento de datos/Codigo Python/Importar_datos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3b45969d",
+   "id": "54f41566",
    "metadata": {},
    "source": [
     "Importar librerias"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "a186ae21",
+   "execution_count": 14,
+   "id": "0c602f7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,127 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "0a8084f4",
+   "execution_count": 57,
+   "id": "6062a1be",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Salary</th>\n",
-       "      <th>Purchased</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>France</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>72000.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>48000.0</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>54000.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>61000.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>France</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>58000.0</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>52000.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>France</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>79000.0</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>83000.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>France</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>67000.0</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Country   Age   Salary Purchased\n",
-       "0   France  44.0  72000.0        No\n",
-       "1    Spain  27.0  48000.0       Yes\n",
-       "2  Germany  30.0  54000.0        No\n",
-       "3    Spain  38.0  61000.0        No\n",
-       "4  Germany  40.0      NaN       Yes\n",
-       "5   France  35.0  58000.0       Yes\n",
-       "6    Spain   NaN  52000.0        No\n",
-       "7   France  48.0  79000.0       Yes\n",
-       "8  Germany  50.0  83000.0        No\n",
-       "9   France  37.0  67000.0       Yes"
+       "array([['France', 44.0, 72000.0],\n",
+       "       ['Spain', 27.0, 48000.0],\n",
+       "       ['Germany', 30.0, 54000.0],\n",
+       "       ['Spain', 38.0, 61000.0],\n",
+       "       ['Germany', 40.0, nan],\n",
+       "       ['France', 35.0, 58000.0],\n",
+       "       ['Spain', nan, 52000.0],\n",
+       "       ['France', 48.0, 79000.0],\n",
+       "       ['Germany', 50.0, 83000.0],\n",
+       "       ['France', 37.0, 67000.0]], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,18 +51,51 @@
     "\n",
     "url = \"https://raw.githubusercontent.com/omarluna18/Machine-Learning-R-y-Python/main/Preprocesamiento%20de%20datos/Datos/Data.csv\"\n",
     "dataset = pd.read_csv(url)\n",
-    "x = dataset.iloc[:,:-1] # Para seleccionar todas las columnas menos la última\n",
-    "y = dataset.iloc[:,3] #Para seleccionar la 4ta columna (en python comienza la cuenta en cero)\n",
-    "dataset\n"
+    "x = dataset.iloc[:,:-1].values # Para seleccionar todas las columnas menos la última y solo los valores\n",
+    "y = dataset.iloc[:,3].values #Para seleccionar la 4ta columna (en python comienza la cuenta en cero) solo los valores\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4be37e7b",
+   "metadata": {},
+   "source": [
+    "Reemplazar datos faltantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "0d6fbda8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "970b3a92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer = SimpleImputer(missing_values = np.nan, strategy = \"mean\")\n",
+    "imputer = imputer.fit(x[:, 1:3])\n",
+    "x[:, 1:3] = imputer.transform(x[:, 1:3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5e72a47",
+   "id": "718bf5de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
